--- a/RayTracer/imgui.ini
+++ b/RayTracer/imgui.ini
@@ -19,10 +19,10 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=823,26
-Size=777,874
+Pos=823,462
+Size=777,438
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][View Port]
 Pos=0,26
@@ -30,8 +30,16 @@ Size=821,874
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Scene]
+Pos=823,26
+Size=777,434
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace   ID=0xF2944C7F Window=0x4647B76E Pos=242,198 Size=1600,874 Split=X
-  DockNode  ID=0x00000001 Parent=0xF2944C7F SizeRef=821,874 CentralNode=1 Selected=0x6EE523C4
-  DockNode  ID=0x00000002 Parent=0xF2944C7F SizeRef=777,874 Selected=0x54723243
+DockSpace     ID=0xF2944C7F Window=0x4647B76E Pos=-18,183 Size=1600,874 Split=X
+  DockNode    ID=0x00000001 Parent=0xF2944C7F SizeRef=821,874 CentralNode=1 Selected=0x6EE523C4
+  DockNode    ID=0x00000002 Parent=0xF2944C7F SizeRef=777,874 Split=Y Selected=0x54723243
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=777,434 Selected=0xE192E354
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=777,438 Selected=0x54723243
 
